2.1.0/_sources/gallery/widgets/textbox.rst.txt


.. _sphx_glr_gallery_widgets_textbox.py:


=======
Textbox
=======





.. image:: /gallery/widgets/images/sphx_glr_textbox_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt
    from matplotlib.widgets import TextBox
    fig, ax = plt.subplots()
    plt.subplots_adjust(bottom=0.2)
    t = np.arange(-2.0, 2.0, 0.001)
    s = t ** 2
    initial_text = "t ** 2"
    l, = plt.plot(t, s, lw=2)


    def submit(text):
        ydata = eval(text)
        l.set_ydata(ydata)
        ax.set_ylim(np.min(ydata), np.max(ydata))
        plt.draw()

    axbox = plt.axes([0.1, 0.05, 0.8, 0.075])
    text_box = TextBox(axbox, 'Evaluate', initial=initial_text)
    text_box.on_submit(submit)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.036 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: textbox.py <textbox.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: textbox.ipynb <textbox.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
